Fixed some minor alignment issues and removed explicit IE prefixes.

--- a/assets/css/components/_forms.sass
+++ b/assets/css/components/_forms.sass
@@ -71,5 +71,5 @@ input[type=submit]
     color: color(whites, x-light)
     background: color(blues)
 
-  // +media(640)
-  //   max-width: 9.4rem
+  +media(640)
+    max-width: 9.4rem
